--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -27,4 +27,5 @@
     <color name="v5">#a4c4d2</color>
     <color name="back">#6C7C7D</color>
     <color name="cool_color">#A4BABB</color>
+    <color name="rBack">#EBEBEB</color>
 </resources>
