--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -15,151 +15,156 @@
         android:title="Регистрация"
         android:titleTextColor="@color/text_color2" />
 
+    <TextView
+        android:id="@+id/text_warning"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/reg"
+        android:layout_marginTop="1dp"
+        android:text="Важно! \n - Пароль не должен быть слишком простым \n - Длина пароля должна быть больше 7 знаков"
+        android:textAlignment="center"
+        android:textColor="@color/red"
+        android:textSize="14sp" />
+
     <RelativeLayout
+        android:id="@+id/relative_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true">
 
-        <RelativeLayout
+        <LinearLayout
+            android:id="@+id/linear_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
             android:gravity="center_horizontal"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp">
 
-            <LinearLayout
-                android:id="@+id/linear_layout"
+            <ru.senya.pixateka.view.InputField
+                android:id="@+id/input_login"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:gravity="center_horizontal"
-                android:orientation="vertical"
-                android:paddingLeft="20dp"
-                android:paddingRight="20dp">
+                android:layout_marginTop="10dp"
+                android:inputType="textEmailAddress"
+                app:hint="Придумайте себе логин"
+                app:hint_color="@color/hint_color"
+                app:src="@drawable/pfp"
+                app:title="Логин" />
 
-                <ru.senya.pixateka.view.InputField
-                    android:id="@+id/input_login"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:inputType="textEmailAddress"
-                    app:hint="Придумайте себе логин"
-                    app:hint_color="@color/hint_color"
-                    app:src="@drawable/pfp"
-                    app:title="Логин" />
+            <ru.senya.pixateka.view.InputField
+                android:id="@+id/input_password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textPassword"
+                app:hint="Придумайте пароль"
+                app:hint_color="@color/hint_color"
+                app:src="@drawable/password"
+                app:title="Пароль" />
 
-                <ru.senya.pixateka.view.InputField
-                    android:id="@+id/input_password"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:inputType="textPassword"
-                    app:hint="Придумайте пароль"
-                    app:hint_color="@color/hint_color"
-                    app:src="@drawable/password"
-                    app:title="Пароль" />
-
-                <TextView
-                    android:id="@+id/show_password"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginVertical="2dp"
-                    android:text="Показать пароль" />
+            <TextView
+                android:id="@+id/show_password"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="2dp"
+                android:text="Показать пароль" />
 
 
-                <ru.senya.pixateka.view.InputField
-                    android:id="@+id/input_repeat_password"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:inputType="textPassword"
-                    app:hint="Подтвердите пароль"
-                    app:hint_color="@color/hint_color"
-                    app:src="@drawable/password"
-                    app:title="Повторный пароль" />
-                <TextView
-                    android:id="@+id/show_r_password"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginVertical="2dp"
-                    android:text="Показать пароль" />
+            <ru.senya.pixateka.view.InputField
+                android:id="@+id/input_repeat_password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textPassword"
+                app:hint="Подтвердите пароль"
+                app:hint_color="@color/hint_color"
+                app:src="@drawable/password"
+                app:title="Повторный пароль" />
 
-                <!--                <ru.senya.pixateka.view.InputField-->
-                <!--                    android:id="@+id/input_first_name"-->
-                <!--                    android:layout_width="match_parent"-->
-                <!--                    android:layout_height="wrap_content"-->
-                <!--                    android:inputType="textPassword"-->
-                <!--                    app:hint="Ваше имя"-->
-                <!--                    app:hint_color="@color/hint_color"-->
-                <!--                    app:title="Имя" />-->
+            <TextView
+                android:id="@+id/show_r_password"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="2dp"
+                android:text="Показать пароль" />
 
-                <!--                <ru.senya.pixateka.view.InputField-->
-                <!--                    android:id="@+id/input_country"-->
-                <!--                    android:layout_width="match_parent"-->
-                <!--                    android:layout_height="wrap_content"-->
-                <!--                    android:inputType="textPassword"-->
-                <!--                    app:hint="Ваша страна"-->
-                <!--                    app:hint_color="@color/hint_color"-->
-                <!--                    app:title="Страна" />-->
+            <!--                <ru.senya.pixateka.view.InputField-->
+            <!--                    android:id="@+id/input_first_name"-->
+            <!--                    android:layout_width="match_parent"-->
+            <!--                    android:layout_height="wrap_content"-->
+            <!--                    android:inputType="textPassword"-->
+            <!--                    app:hint="Ваше имя"-->
+            <!--                    app:hint_color="@color/hint_color"-->
+            <!--                    app:title="Имя" />-->
 
-<!--                <ru.senya.pixateka.view.InputField-->
-<!--                    android:id="@+id/input_email"-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:inputType="textPassword"-->
-<!--                    app:hint="Ваша почта"-->
-<!--                    app:hint_color="@color/hint_color"-->
-<!--                    app:title="Почта" />-->
+            <!--                <ru.senya.pixateka.view.InputField-->
+            <!--                    android:id="@+id/input_country"-->
+            <!--                    android:layout_width="match_parent"-->
+            <!--                    android:layout_height="wrap_content"-->
+            <!--                    android:inputType="textPassword"-->
+            <!--                    app:hint="Ваша страна"-->
+            <!--                    app:hint_color="@color/hint_color"-->
+            <!--                    app:title="Страна" />-->
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+            <!--                <ru.senya.pixateka.view.InputField-->
+            <!--                    android:id="@+id/input_email"-->
+            <!--                    android:layout_width="match_parent"-->
+            <!--                    android:layout_height="wrap_content"-->
+            <!--                    android:inputType="textPassword"-->
+            <!--                    app:hint="Ваша почта"-->
+            <!--                    app:hint_color="@color/hint_color"-->
+            <!--                    app:title="Почта" />-->
 
-                    <com.makeramen.roundedimageview.RoundedImageView
-                        android:id="@+id/choosePhotoImg"
-                        android:layout_width="75dp"
-                        android:layout_height="75dp"
-                        android:scaleType="centerCrop"
-                        android:src="@drawable/baseline_image_24" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-                    <Button
-                        android:id="@+id/choosePhotoBtn"
-                        android:layout_width="match_parent"
-                        android:layout_height="50dp"
-                        android:layout_gravity="center"
-                        android:backgroundTint="@color/button"
-                        android:gravity="center"
-                        android:text="Выбрать аватарку"
-                        android:textAlignment="center"
-
-                        android:textColor="@color/white"
-                        android:textSize="17sp" />
-                </LinearLayout>
-
-
-                <!--                <CheckBox-->
-                <!--                    android:id="@+id/checkbox"-->
-                <!--                    android:layout_width="match_parent"-->
-                <!--                    android:layout_height="wrap_content"-->
-                <!--                    android:text="Принимаю условия пользовательского соглашения"-->
-                <!--                    android:textAlignment="textStart" />-->
-
+                <com.makeramen.roundedimageview.RoundedImageView
+                    android:id="@+id/choosePhotoImg"
+                    android:layout_width="75dp"
+                    android:layout_height="75dp"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/baseline_image_24" />
 
                 <Button
-                    android:id="@+id/button_enter2"
+                    android:id="@+id/choosePhotoBtn"
                     android:layout_width="match_parent"
-                    android:layout_height="60dp"
-                    android:backgroundTint="@color/button"
-                    android:text="Войти"
-                    android:textColor="@color/white" />
-
-
-                <Button
-                    android:id="@+id/button_back"
-                    android:layout_width="wrap_content"
                     android:layout_height="50dp"
+                    android:layout_gravity="center"
                     android:backgroundTint="@color/button"
-                    android:text="У меня уже есть аккаунт"
-                    android:textColor="@color/white" />
+                    android:gravity="center"
+                    android:text="Выбрать аватарку"
+                    android:textAlignment="center"
 
+                    android:textColor="@color/white"
+                    android:textSize="17sp" />
             </LinearLayout>
+
+
+            <!--                <CheckBox-->
+            <!--                    android:id="@+id/checkbox"-->
+            <!--                    android:layout_width="match_parent"-->
+            <!--                    android:layout_height="wrap_content"-->
+            <!--                    android:text="Принимаю условия пользовательского соглашения"-->
+            <!--                    android:textAlignment="textStart" />-->
+
+
+            <Button
+                android:id="@+id/button_enter2"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:backgroundTint="@color/button"
+                android:text="Войти"
+                android:textColor="@color/white" />
+
+
+            <Button
+                android:id="@+id/button_back"
+                android:layout_width="wrap_content"
+                android:layout_height="50dp"
+                android:backgroundTint="@color/button"
+                android:text="У меня уже есть аккаунт"
+                android:textColor="@color/white" />
 
             <TextView
                 android:id="@+id/wrong"
@@ -169,10 +174,20 @@
                 android:layout_centerHorizontal="true"
                 android:text="Что-то неверно!"
                 android:textColor="@color/red"
-                android:visibility="gone"
+                android:visibility="invisible"
                 tools:visibility="visible" />
-        </RelativeLayout>
+
+
+        </LinearLayout>
+
     </RelativeLayout>
 
+    <ProgressBar
+        android:id="@+id/progress_circular"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_below="@+id/relative_layout"
+        android:layout_centerHorizontal="true"
+        android:visibility="gone" />
 
 </RelativeLayout>
