--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -37,6 +37,7 @@
         android:layout_below="@+id/mainToolbar">
 
         <androidx.recyclerview.widget.RecyclerView
+            android:background="@color/rBack"
             android:id="@+id/main_recycler_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
