--- a/app/src/main/res/layout/new_fragment_profile.xml
+++ b/app/src/main/res/layout/new_fragment_profile.xml
@@ -12,8 +12,8 @@
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/shape3"
+            android:layout_height="52dp"
+            android:background="@color/toolbar_color"
             app:title="Профиль"
             app:titleTextColor="@color/white">
 
@@ -28,12 +28,12 @@
                 android:textColor="@color/white" />
         </androidx.appcompat.widget.Toolbar>
 
-<!--        <ru.senya.pixateka.view.viewFullscreen-->
-<!--            android:id="@+id/fragment"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="match_parent"-->
-<!--            android:layout_below="@+id/toolbar"-->
-<!--            android:visibility="gone" />-->
+        <!--        <ru.senya.pixateka.view.viewFullscreen-->
+        <!--            android:id="@+id/fragment"-->
+        <!--            android:layout_width="match_parent"-->
+        <!--            android:layout_height="match_parent"-->
+        <!--            android:layout_below="@+id/toolbar"-->
+        <!--            android:visibility="gone" />-->
 
         <androidx.core.widget.NestedScrollView
             android:id="@+id/nested_scroll_view"
@@ -62,126 +62,163 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">
 
-                        <FrameLayout
-                            android:id="@+id/backround_frame"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
-
-                            <ImageView
-                                android:id="@+id/back"
-                                android:layout_width="match_parent"
-                                android:layout_height="200dp"
-                                android:background="@color/back" />
-
-                            <ImageView
-                                android:layout_width="match_parent"
-                                android:layout_height="200dp"
-                                android:scaleType="centerCrop"
-                                android:src="@drawable/shape" />
-                        </FrameLayout>
-
                         <androidx.cardview.widget.CardView
-                            android:layout_width="156dp"
-                            android:layout_height="156dp"
-                            android:layout_alignBottom="@+id/backround_frame"
-                            android:layout_centerHorizontal="true"
-                            android:layout_marginBottom="20dp"
-                            android:elevation="12dp"
-                            app:cardCornerRadius="80dp">
-
-                            <ImageView
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:src="@color/white" />
-                        </androidx.cardview.widget.CardView>
-
-                        <androidx.cardview.widget.CardView
-                            android:id="@+id/pfp_frame"
-                            android:layout_width="150dp"
-                            android:layout_height="150dp"
-                            android:layout_marginBottom="23dp"
-                            android:layout_alignBottom="@+id/backround_frame"
-                            android:layout_centerHorizontal="true"
-                            android:elevation="12dp"
-                            app:cardCornerRadius="80dp">
-
-                            <ImageView
-                                android:id="@+id/pfp_img"
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:scaleType="centerCrop"
-                                android:src="@drawable/pfp" />
-
-
-                        </androidx.cardview.widget.CardView>
-
-
-                        <LinearLayout
-                            android:layout_marginTop="-10dp"
                             android:id="@+id/bio"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_below="@id/pfp_frame"
-                            android:orientation="vertical">
+                            android:layout_height="match_parent"
+                            android:layout_marginBottom="3dp"
+                            android:translationZ="2dp"
+                            app:cardCornerRadius="10dp">
 
-                            <TextView
-                                android:id="@+id/name"
+                            <RelativeLayout
                                 android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_margin="1dp"
-                                android:text="Name Surname"
-                                android:textAlignment="center"
-                                android:textColor="@color/text_color"
-                                android:textSize="30sp" />
+                                android:layout_height="match_parent">
 
-                            <TextView
-                                android:id="@+id/about"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="center"
-                                android:layout_margin="1dp"
-                                android:layout_marginHorizontal="5000dp"
-                                android:layout_marginTop="10dp"
-                                android:text="Пользователь еще не заполнил описание"
-                                android:textAlignment="center"
-                                android:textColor="@color/text_color"
-                                android:textSize="18sp" />
+                                <FrameLayout
+                                    android:id="@+id/backround_frame"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content">
 
-                            <Button
-                                android:id="@+id/button_edit_profile"
-                                android:layout_width="220dp"
-                                android:layout_height="60dp"
-                                android:layout_gravity="center"
-                                android:layout_marginVertical="10dp"
-                                android:autoSizeTextType="uniform"
-                                android:backgroundTint="@color/button"
-                                android:text="Редактировать профиль"
-                                android:textColor="@color/white" />
-                        </LinearLayout>
+                                    <ImageView
+                                        android:id="@+id/back"
+                                        android:layout_width="match_parent"
+                                        android:layout_height="200dp"
+                                        android:background="@color/toolbar_color"
+                                        android:scaleType="centerCrop" />
+
+                                    <ImageView
+                                        android:layout_width="match_parent"
+                                        android:layout_height="200dp"
+                                        android:scaleType="centerCrop"
+                                        android:src="@drawable/shape" />
+                                </FrameLayout>
+
+                                <androidx.cardview.widget.CardView
+                                    android:layout_width="156dp"
+                                    android:layout_height="156dp"
+                                    android:layout_alignBottom="@+id/backround_frame"
+                                    android:layout_centerHorizontal="true"
+                                    android:layout_marginBottom="20dp"
+                                    android:elevation="12dp"
+                                    app:cardCornerRadius="80dp">
+
+                                    <ImageView
+                                        android:layout_width="match_parent"
+                                        android:layout_height="match_parent"
+                                        android:src="@color/white" />
+                                </androidx.cardview.widget.CardView>
+
+                                <androidx.cardview.widget.CardView
+                                    android:id="@+id/pfp_frame"
+                                    android:layout_width="150dp"
+                                    android:layout_height="150dp"
+                                    android:layout_alignBottom="@+id/backround_frame"
+                                    android:layout_centerHorizontal="true"
+                                    android:layout_marginBottom="23dp"
+                                    android:elevation="12dp"
+                                    app:cardCornerRadius="80dp">
+
+                                    <ImageView
+                                        android:id="@+id/pfp_img"
+                                        android:layout_width="match_parent"
+                                        android:layout_height="match_parent"
+                                        android:scaleType="centerCrop"
+                                        android:src="@drawable/pfp" />
+
+
+                                </androidx.cardview.widget.CardView>
+
+
+                                <LinearLayout
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_below="@id/pfp_frame"
+                                    android:layout_marginTop="-10dp"
+                                    android:orientation="vertical">
+
+                                    <TextView
+                                        android:id="@+id/name"
+                                        android:layout_width="match_parent"
+                                        android:layout_height="wrap_content"
+                                        android:layout_margin="1dp"
+                                        android:text="Name Surname"
+                                        android:textAlignment="center"
+                                        android:textColor="@color/text_color"
+                                        android:textSize="30sp" />
+
+                                    <TextView
+                                        android:id="@+id/about"
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:layout_gravity="center"
+                                        android:layout_margin="1dp"
+                                        android:layout_marginHorizontal="5000dp"
+                                        android:layout_marginTop="10dp"
+                                        android:text="Пользователь еще не заполнил описание"
+                                        android:textAlignment="center"
+                                        android:textColor="@color/text_color"
+                                        android:textSize="18sp" />
+
+                                    <Button
+                                        android:id="@+id/button_edit_profile"
+                                        android:layout_width="210dp"
+                                        android:layout_height="55dp"
+                                        android:layout_gravity="center"
+                                        android:layout_marginVertical="10dp"
+                                        android:backgroundTint="@color/button"
+                                        android:text="Редактировать"
+                                        android:textColor="@color/white"
+                                        android:textSize="16sp" />
+                                </LinearLayout>
+                            </RelativeLayout>
+                        </androidx.cardview.widget.CardView>
 
                         <TextView
+                            android:id="@+id/what_is_it"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_below="@+id/bio"
-                            android:textAlignment="center"
-                            android:text="Тут ничего нет"
-                            android:textColor="@color/text_color"
-                            android:textSize="20sp" />
+                            android:layout_below="@id/bio"
+                            android:layout_marginTop="18dp"
+                            android:layout_marginBottom="2dp"
+                            android:layout_marginStart="7dp"
+                            android:text="Фотографии пользователя"
+                            android:textAlignment="viewStart"
+                            android:textColor="@color/black"
+                            android:textSize="22sp" />
 
-                        <androidx.recyclerview.widget.RecyclerView
-                            android:background="@color/white"
-                            android:id="@+id/recycler_list"
+                        <androidx.cardview.widget.CardView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_below="@+id/bio"
-                            android:layout_margin="1dp"
-                            android:layout_marginTop="3dp" />
+                            android:layout_below="@id/what_is_it"
+                            android:layout_marginVertical="3dp"
+                            android:translationZ="10dp"
+                            app:cardCornerRadius="10dp">
 
+                            <RelativeLayout
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content">
+                                <TextView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:text="Тут ничего нет"
+                                    android:textAlignment="center"
+                                    android:textColor="@color/text_color"
+                                    android:textSize="20sp" />
+
+                                <androidx.recyclerview.widget.RecyclerView
+                                    android:id="@+id/recycler_list"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginStart="1dp"
+                                    android:layout_marginEnd="1dp"
+                                    android:layout_marginBottom="1dp"
+                                    android:background="@color/rBack" />
+                            </RelativeLayout>
+
+                        </androidx.cardview.widget.CardView>
 
                     </RelativeLayout>
                 </RelativeLayout>
-
-
             </RelativeLayout>
         </androidx.core.widget.NestedScrollView>
     </RelativeLayout>
