--- a/app/src/main/res/layout/view_fullscreen.xml
+++ b/app/src/main/res/layout/view_fullscreen.xml
@@ -1,96 +1,132 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main_fragment"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:background="@color/white"
+    android:gravity="center_horizontal"
+    android:orientation="vertical">
 
+    <include
+        android:id="@+id/included"
+        layout="@layout/view_item"
+        android:layout_margin="1dp" />
 
-    <LinearLayout
-        android:id="@+id/main_fragment"
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
-        android:gravity="center_horizontal"
-        android:orientation="vertical">
-
-        <include
-            android:id="@+id/included"
-            layout="@layout/view_item" />
-
+        android:layout_marginHorizontal="3dp"
+        android:translationZ="10dp"
+        app:cardCornerRadius="4dp">
 
         <LinearLayout
-            android:paddingBottom="3dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:paddingEnd="4dp"
             tools:ignore="RtlSymmetry">
 
             <com.makeramen.roundedimageview.RoundedImageView
                 android:id="@+id/pfp"
                 android:layout_width="57dp"
                 android:layout_height="57dp"
-                android:layout_gravity="start"
+                android:layout_marginVertical="1dp"
+                android:layout_gravity="center"
                 android:layout_marginHorizontal="4dp"
                 android:scaleType="centerCrop"
                 android:src="@drawable/pfp"
                 app:riv_corner_radius="80dp" />
 
-            <TextView
-                android:id="@+id/main_description"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="4dp"
-                android:layout_weight="1"
-                android:paddingHorizontal="4dp"
-                android:text="desc"
-                android:textAlignment="textStart"
-                android:textColor="#4E4E4E"
-                android:textSize="14.3sp" />
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/main_description"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="4dp"
+                    android:layout_weight="1"
+                    android:paddingHorizontal="4dp"
+                    android:text="desc"
+                    android:textAlignment="textStart"
+                    android:textColor="#4E4E4E"
+                    android:textSize="14.3sp" />
+
+                <TextView
+                    android:id="@+id/by_user"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="4dp"
+                    android:layout_weight="1"
+                    android:paddingHorizontal="4dp"
+                    android:text="by user"
+                    android:textAlignment="textStart"
+                    android:textColor="#4E4E4E"
+                    android:textSize="14.3sp" />
+            </LinearLayout>
 
 
         </LinearLayout>
+    </androidx.cardview.widget.CardView>
 
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="3dp"
+        android:padding="3dp"
+        android:translationZ="10dp"
+        app:cardCornerRadius="4dp">
 
-        <com.google.android.material.tabs.TabLayout
-            android:id="@+id/tabs"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/tab_layout_bg"
-            app:tabIndicatorColor="@color/v2"
-            app:tabIndicatorFullWidth="false"
-            app:tabIndicatorHeight="3dp"
-            app:tabTextColor="@color/black" />
+            android:orientation="vertical">
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/list"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/list2"
+            <com.google.android.material.tabs.TabLayout
+                android:translationZ="10dp"
+                android:id="@+id/tabs"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:visibility="invisible" />
+                android:background="@drawable/tab_layout_bg"
+                app:tabIndicatorColor="@color/v2"
+                app:tabIndicatorFullWidth="false"
+                app:tabIndicatorHeight="3dp"
+                app:tabTextColor="@color/black" />
 
-            <TextView
-                android:id="@+id/nothing_was_found"
-                android:visibility="invisible"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:text="Ничего похожего не найдено"
-                android:textColor="@color/text_color"
-                android:textSize="20sp" />
-        </RelativeLayout>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-    </LinearLayout>
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/list"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/list2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:visibility="invisible" />
+
+                <TextView
+                    android:id="@+id/nothing_was_found"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:text="Ничего похожего не найдено"
+                    android:textColor="@color/text_color"
+                    android:textSize="20sp"
+                    android:visibility="invisible" />
+            </RelativeLayout>
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
 
 
-</RelativeLayout>
+</LinearLayout>
+
+
