--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -45,7 +45,7 @@
                     android:inputType="textEmailAddress"
                     app:hint="Ваш логин"
                     app:hint_color="@color/hint_color"
-                    app:src="@drawable/pfp"
+                    app:src="@drawable/avatar"
                     app:title="Логин" />
 
                 <ru.senya.pixateka.view.InputField
@@ -55,16 +55,8 @@
                     android:inputType="textPassword"
                     app:hint="Ваш пароль"
                     app:hint_color="@color/hint_color"
-                    app:src="@drawable/password"
+                    app:src="@drawable/password_icon"
                     app:title="Пароль" />
-
-                <TextView
-                    android:id="@+id/show_password"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginVertical="2dp"
-                    android:text="Показать пароль" />
-
 
                 <Button
                     android:id="@+id/button_enter"
