--- a/app/src/main/res/layout/actvity_test.xml
+++ b/app/src/main/res/layout/actvity_test.xml
@@ -6,10 +6,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
-       <Button
-           android:layout_centerInParent="true"
-           android:id="@+id/b"
-           android:layout_width="150dp"
-           android:layout_height="50dp"/>
+       <FrameLayout
+           android:id="@+id/frame"
+           android:layout_width="match_parent"
+           android:layout_height="match_parent"/>
 
 </RelativeLayout>
