--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -30,11 +30,12 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/text"
                 android:layout_marginStart="7dp"
+
                 android:layout_marginTop="7dp"
                 android:layout_marginEnd="7dp"
                 android:layout_marginBottom="7dp"
                 android:iconifiedByDefault="false"
-                android:outlineAmbientShadowColor="@color/black"
+                android:textColor="@color/white"
                 android:queryHint="Введите Ваш запрос"
                 android:textSize="16sp" />
 
