--- a/app/src/main/res/layout/view_input_field.xml
+++ b/app/src/main/res/layout/view_input_field.xml
@@ -16,10 +16,10 @@
         android:textSize="15sp" />
 
     <EditText
-        android:layout_below="@+id/title"
         android:id="@+id/input"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/title"
         android:backgroundTint="@color/black"
         android:inputType="textPassword"
         android:shadowColor="@color/black"
@@ -28,13 +28,13 @@
 
     <ImageView
         android:id="@+id/pic"
-        android:layout_marginRight="12dp"
         android:layout_width="20sp"
         android:layout_height="20sp"
         android:layout_below="@+id/input"
         android:layout_alignTop="@+id/input"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:layout_marginTop="9sp"
+        android:layout_marginEnd="12dp"
         tools:src="@drawable/pfp" />
 
 </RelativeLayout>
