--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -96,8 +96,9 @@
 
             <Button
                 android:id="@+id/button"
-                android:layout_width="220dp"
-                android:layout_height="60dp"
+                android:layout_width="230dp"
+                android:layout_height="65dp"
+                android:textSize="16sp"
                 android:layout_marginBottom="30dp"
                 android:backgroundTint="@color/button"
                 android:text="@string/TextUploadPhoto"
