--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,23 +39,25 @@
         android:visibility="gone"
         app:title="Photo" />
 
-    <ru.senya.pixateka.view.viewFullscreen
-        android:id="@+id/vfs"
-        android:layout_below="@id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/white"
-        android:visibility="gone" />
+        <ru.senya.pixateka.view.viewFullscreen
+            android:id="@+id/vfs"
+            android:layout_below="@id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/white"
+            android:visibility="gone" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/nav_view"
         android:layout_width="match_parent"
-        app:labelVisibilityMode="selected"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="0dp"
         android:layout_marginEnd="0dp"
-        android:background="?android:attr/windowBackground"
+        android:background="@color/white"
+        app:itemIconTint="@color/button"
+        app:itemTextColor="@color/button"
+        app:labelVisibilityMode="selected"
         app:menu="@menu/bottom_nav_menu" />
 
 </RelativeLayout>
