--- a/app/src/main/res/layout/actvity_test.xml
+++ b/app/src/main/res/layout/actvity_test.xml
@@ -6,9 +6,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
-       <FrameLayout
-           android:id="@+id/frame"
-           android:layout_width="match_parent"
-           android:layout_height="match_parent"/>
+       <TextView
+           android:text="@string/app_name"
+           android:layout_centerInParent="true"
+           android:textSize="25sp"
+           android:textColor="@color/button"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"/>
 
 </RelativeLayout>
