--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -46,10 +46,9 @@
                 <ImageView
                     android:id="@+id/back"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="200dp"
                     android:adjustViewBounds="true"
-                    android:maxHeight="200dp"
-                    android:scaleType="center"
+                    android:scaleType="centerCrop"
                     tools:src="@color/button" />
 
                 <FrameLayout
@@ -57,7 +56,6 @@
                     android:layout_height="match_parent"
                     android:adjustViewBounds="true"
                     android:background="@drawable/shape"
-                    android:maxHeight="200dp"
                     android:scaleType="centerInside" />
             </FrameLayout>
 
@@ -117,7 +115,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
-                    android:inputType="text"
+                    android:inputType="textMultiLine"
                     app:hint="Напишите о себе"
                     app:hint_color="@color/hint_color"
                     app:title="О себе" />
@@ -132,7 +130,7 @@
                     android:backgroundTint="@color/button"
                     android:text="Выбрать фоновый рисунок"
                     android:textColor="@color/white"
-                    android:textSize="15sp" />
+                    android:textSize="16sp" />
 
 
             </LinearLayout>
@@ -146,7 +144,7 @@
                 android:layout_marginTop="4dp"
                 android:layout_marginEnd="4dp"
                 android:layout_marginBottom="4dp"
-                android:autoSizeMaxTextSize="20sp"
+                android:autoSizeMaxTextSize="18sp"
                 android:autoSizeTextType="uniform"
                 android:backgroundTint="@color/button"
                 android:padding="7dp"
