--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,14 +9,14 @@
     <color name="white">#FFFFFFFF</color>
     <color name="background">#FFFFFFFF</color>
     <color name="hint_color">#65000000</color>
-    <color name="main_color">#626e7c</color>
-    <color name="toolbar_color">#1976D2</color>
+    <color name="main_color">#677e7f</color>
+    <color name="toolbar_color">#616B58</color>
     <color name="red">#FF0000</color>
     <color name="blue">#0d6efd</color>
-    <color name="text_color">#7b8e8f</color>
+    <color name="text_color">#616B58</color>
     <color name="text_color2">#FFFFFF</color>
     <color name="text_color3">#FFFFFF</color>
-    <color name="button">#1976D2</color>
+    <color name="button">#616B58</color>
     <color name="button2">#7C9FA0</color>
     <color name="orange">#FF5722</color>
     <color name="yellow">#FFB600</color>
