--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -45,7 +45,7 @@
                     android:inputType="textEmailAddress"
                     app:hint="Ваш логин"
                     app:hint_color="@color/hint_color"
-                    app:src="@drawable/avatar"
+                    app:src="@drawable/ic_action_name"
                     app:title="Логин" />
 
                 <ru.senya.pixateka.view.InputField
@@ -55,18 +55,19 @@
                     android:inputType="textPassword"
                     app:hint="Ваш пароль"
                     app:hint_color="@color/hint_color"
-                    app:src="@drawable/password_icon"
                     app:title="Пароль" />
 
                 <Button
                     android:id="@+id/button_enter"
                     android:layout_width="match_parent"
                     android:layout_height="60dp"
+                    android:textSize="15sp"
                     android:backgroundTint="@color/button"
                     android:text="Войти"
                     android:textColor="@color/white" />
 
                 <Button
+                    android:textSize="14sp"
                     android:id="@+id/button_registration"
                     android:layout_width="200dp"
                     android:layout_height="50dp"
