--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -122,6 +122,7 @@
 
 
                 <Button
+                    android:textSize="15sp"
                     android:id="@+id/back_button"
                     android:layout_width="match_parent"
                     android:layout_height="65dp"
@@ -130,7 +131,7 @@
                     android:backgroundTint="@color/button"
                     android:text="Выбрать фоновый рисунок"
                     android:textColor="@color/white"
-                    android:textSize="16sp" />
+                    />
 
 
             </LinearLayout>
@@ -143,6 +144,7 @@
                 android:layout_marginStart="4dp"
                 android:layout_marginTop="4dp"
                 android:layout_marginEnd="4dp"
+                android:textSize="15sp"
                 android:layout_marginBottom="4dp"
                 android:autoSizeMaxTextSize="18sp"
                 android:autoSizeTextType="uniform"
@@ -153,6 +155,5 @@
         </RelativeLayout>
 
     </RelativeLayout>
-
 
 </ScrollView>
