--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -22,29 +22,53 @@
                 android:background="@color/toolbar_color"
                 android:gravity="center_horizontal"
                 android:title="@string/search"
-                android:titleTextColor="@color/text_color2"/>
+                android:titleTextColor="@color/text_color2" />
 
-            <SearchView
+            <!--            <SearchView-->
+            <!--                android:id="@+id/search"-->
+            <!--                android:layout_width="match_parent"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:layout_below="@+id/text"-->
+            <!--                android:layout_marginStart="7dp"-->
+            <!--                android:layout_marginTop="7dp"-->
+            <!--                android:layout_marginEnd="7dp"-->
+            <!--                android:layout_marginBottom="7dp"-->
+            <!--                android:iconifiedByDefault="false"-->
+            <!--                android:queryHint="Введите Ваш запрос"-->
+            <!--                android:textColor="@color/white"-->
+            <!--                android:textSize="16sp" />-->
+
+            <androidx.appcompat.widget.SearchView
                 android:id="@+id/search"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/text"
                 android:layout_marginStart="7dp"
-
-                android:layout_marginTop="7dp"
+                android:layout_marginTop="12dp"
                 android:layout_marginEnd="7dp"
                 android:layout_marginBottom="7dp"
-                android:iconifiedByDefault="false"
+                android:background="@drawable/search_bg"
                 android:textColor="@color/white"
-                android:queryHint="Введите Ваш запрос"
-                android:textSize="16sp" />
+                android:translationZ="10dp"
+                android:textColorHint="@color/white"
+                android:textSize="16sp"
+                app:closeIcon="@drawable/ic_action_close"
+                app:defaultQueryHint="Введите Ваш запрос"
+                app:iconifiedByDefault="false"
+                app:queryHint="Введите Ваш запрос"
+                app:searchIcon="@drawable/ic_action_search" />
 
             <Button
                 android:id="@+id/button"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:layout_below="@id/search"
-                android:layout_margin="5dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="5dp"
+                android:translationZ="10dp"
+                android:textSize="16sp"
+                android:layout_marginEnd="5dp"
+                android:layout_marginBottom="5dp"
                 android:backgroundTint="@color/button"
                 android:text="Найти"
                 android:textColor="@color/white" />
@@ -77,12 +101,13 @@
             android:visibility="gone"
             app:title="Photo" />
 
-        <ru.senya.pixateka.view.viewFullscreen
-            android:id="@+id/fragment"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@+id/toolbar"
-            android:visibility="gone" />
+
+                <ru.senya.pixateka.view.viewFullscreen
+                    android:id="@+id/fragment"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_below="@+id/toolbar"
+                    android:visibility="gone" />
     </RelativeLayout>
 
 
