--- a/app/src/main/res/layout/view_fullscreen.xml
+++ b/app/src/main/res/layout/view_fullscreen.xml
@@ -3,10 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main_fragment"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:background="@color/white"
     android:gravity="center_horizontal"
     android:orientation="vertical">
+
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -50,7 +51,6 @@
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
-
     <include
         android:id="@+id/included"
         layout="@layout/view_item"
@@ -84,7 +84,6 @@
             android:textColor="#000000"
             android:textSize="14sp" />
     </LinearLayout>
-
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
