--- a/app/src/main/res/layout/view_input_field.xml
+++ b/app/src/main/res/layout/view_input_field.xml
@@ -1,40 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:maxHeight="10dp"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:inputType="text"
-        android:text="Email address"
-        android:textColor="@color/hint_color"
-        android:textSize="15sp" />
-
-    <EditText
-        android:id="@+id/input"
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/frame"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/title"
-        android:backgroundTint="@color/black"
-        android:inputType="textPassword"
-        android:shadowColor="@color/black"
-        android:textColor="@color/black"
-        android:textSize="18sp" />
+        app:endIconMode="custom"
+        app:endIconTint="@color/button">
 
-    <ImageView
-        android:id="@+id/pic"
-        android:layout_width="20sp"
-        android:layout_height="20sp"
-        android:layout_below="@+id/input"
-        android:layout_alignTop="@+id/input"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="9sp"
-        android:layout_marginEnd="12dp"
-        tools:src="@drawable/pfp" />
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/m_input"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </com.google.android.material.textfield.TextInputLayout>
 
 </RelativeLayout>
