--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -8,13 +8,13 @@
     <item
         android:id="@+id/search"
         android:icon="@drawable/search"
-        android:title="Search" />
+        android:title="Поиск" />
 
 
 
     <item
         android:id="@+id/navigation_profile"
         android:icon="@drawable/user"
-        android:title="Profile" />
+        android:title="Профиль" />
 
 </menu>
