--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,7 +6,7 @@
         <item name="colorPrimaryVariant">@color/main_color</item>
         <item name="colorOnPrimary">@color/main_color</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/red</item>
+        <item name="colorSecondary">#000000</item>
         <item name="colorSecondaryVariant">@color/red</item>
         <item name="colorOnSecondary">@color/background</item>
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimary</item>
@@ -16,11 +16,14 @@
     <style name="Splash" parent="Theme.AppCompat.DayNight.NoActionBar">
         <item name="android:windowBackground" tools:targetApi="l">#8D979C</item>
     </style>
+
     <style name="Theme.Pixateka.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
+
     <style name="Theme.Pixateka.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
     <style name="Theme.Pixateka.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
 </resources>
